--- a/Rapport2/rapport.tex
+++ b/Rapport2/rapport.tex
@@ -58,7 +58,39 @@ The following is a description of the different folders available at
 \item[root] Contains the implementations of the different streams and
   the external heap.
 
-% TODO:
+\item[measurements/] Contains the raw measurements used for the plots in the
+  report.
+\end{description}
+
+\subsubsection{Code structure}
+The code has the following source files:
+\begin{description}
+
+
+\item[block.hpp] \texttt{Block} class that represents a node and contains methods for opening streams to the.
+
+\item[buffered\_stream.hpp] Our implementation of a buffered stream.
+
+\item[cached\_stream.hpp] A cached stream that abstracts another stream and provides a cache layer.
+
+\item[CMakeLists.txt] CMake file for the project specifying
+  compilation options.
+
+\item[dummy\_stream.hpp] A dummy in-memory stream used for testing.
+
+\item[external\_heap.hpp] Our external heap interface that provides \texttt{insert}, \texttt{extract\_max}, etc.
+
+\item[f\_stream.hpp] Stream implementation using \texttt{fread} and \texttt{fwrite}.
+
+\item[main.cpp] Driver code for calling sanity tests.
+
+\item[mmap\_file\_stream.hpp] Stream implementation using memory mapping and maps the whole file.
+
+\item[mmap\_stream.hpp] Stream implementation using memory mapping and maps block by block.
+
+\item[sys\_stream.hpp] Stream implementation using POSIX \texttt{read} and \texttt{write}.
+
+\item[test.cpp] Driver code for calling test code.
 
 \end{description}
 
