--- a/Rapport2/benchmarks.tex
+++ b/Rapport2/benchmarks.tex
@@ -89,7 +89,7 @@ For all the benchmarked input sizes, it has always been possible to simply incre
 
 \subsection{BufferedStream}
 
-For BufferedStream the memory efficient sifting algorithm was the highest performing. This is believed to be due to the same reasoning as explained in subsection \todo{subsectionen!}.
+For BufferedStream the memory efficient sifting algorithm was the highest performing. This is believed to be due to the same reasoning as explained in subsection~\ref{sec:sifting}.
 
 \begin{figure}[h!]
   \centering
