Rapport and plots

--- a/Rapport2/benchmarks.tex
+++ b/Rapport2/benchmarks.tex
@@ -16,7 +16,7 @@ Like before, the stream interleaving done by the memory inefficient algorithm is
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.9\textwidth]{m_efficiency}
+  \includegraphics[width=1\columnwidth]{m_efficiency}
   \caption{Comparison of memory inefficient and memory efficient sifting algorithm, when using MMapStream with varying node sizes and 1GB of elements.}
   \label{fig:m-efficiency}
 \end{figure}
@@ -51,7 +51,7 @@ Figure~\ref{fig:m-cache-size-comparison} shows that the MMapStream performance s
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.9\textwidth]{m_cache_size_comparison}
+  \includegraphics[width=1\columnwidth]{m_cache_size_comparison}
   \caption{Comparison of the running time for different node sizes using different cache sizes for MMapStream.}
   \label{fig:m-cache-size-comparison}
 \end{figure}
@@ -71,7 +71,7 @@ As seen on Figure~\ref{fig:m:vary-d} it can be seen that the bigger value of $d$
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.9\textwidth]{m_d}
+  \includegraphics[width=1\columnwidth]{m_d}
   \caption{Running time of MMapStream when varying the $d$ parameter.}
   \label{fig:m:vary-d}
 \end{figure}
@@ -93,7 +93,7 @@ For BufferedStream the memory efficient sifting algorithm was the highest perfor
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=1\textwidth]{b_final.pdf}
+  \includegraphics[width=1\columnwidth]{b_final.pdf}
   \caption{Time for sorting a 1GB file varying the buffer size (x-axis) and the node size (series)}
   \label{fig:b_final}
 \end{figure}
